# entari-registry

./: init.py  pyproject.toml  registry.json  update.py  utils.py
.github/workflows/: loop_update.yml
