[project]
name = "entari-registry"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = ["httpx2>=2.7.0", "selectolax>=0.4.1"]
requires-python = ">= 3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.ruff]
line-length = 120